--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sina Baharlouei
-description: Hacker is a theme for GitHub Pages.
+description: Ph.D Student, Department of Industrial and Systems Engineering, University of Southern California
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
