--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sina Baharlouei
-description: Ph.D Student, Department of Industrial and Systems Engineering, University of Southern California
+description:
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
